--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <h1>Temperature Converter</h1>
   
   <input id="input" type="number" name="temp">
-  <input id="celcius" type="radio" name="unit"> Celcius
-  <input id="fahrenheit" type="radio" name="unit"> Fahrenheit
+  <input id="Cel" type="radio" name="unit"> Celcius
+  <input id="Fah" type="radio" name="unit"> Fahrenheit
   <button id="clear">clear</button>
   <button id="converter">Convert</button>
 
